# foxglove-genom3

./: .gitignore  Environment.idl  FoxgloveStudio-genom3-uninstalled.pc.in  FoxgloveStudio-genom3.pc.in  INSTALL.md  Makefile.am  README.adoc  bootstrap.sh  configure.ac  foxglove.gen
codels/: FoxgloveStudio_codels.cc  FoxgloveStudio_main_codels.cc  FoxgloveStudio_publish_codels.cc  Makefile.am  convertor.cc  convertor.h  foxglove_server.h  schema.h  websocket_server.h
codels/foxglove/websocket/: websocket_server.hpp
examples/: python.py  tcl_script.tcl
flatbuffers/definitions/: Imu.fbs  TimedVector3.fbs
